# necs-sandbox

./: .gitignore
structure-batiment/: pyproject.toml  run_local.sh
structure-batiment/analysis/: axis_line_spacing.py  compare_vertices.py  grid_analysis.py  object_diff_analysis.py
structure-batiment/data/alpha-0.13/: alignment_report_20260206_003534.json  alignment_report_20260206_071524.json  geometrie_2_prd.db  geometrie_2_prd.etl_report.json  geometrie_2_prd_aligned_20260206_071524.reverse_etl_report.json
structure-batiment/data/alpha-0.5/: geometrie_2_prd.etl_report.json  geometrie_2_prd_aligned_20260206_003534.reverse_etl_report.json
structure-batiment/data/input/: geometrie_2.db  geometrie_2_prd.etl_report.json
structure-batiment/data/old/: alignment_report_20260205_232441.json  geometrie_2_prd.db  (+1 more)
structure-batiment/prd/: PRD.docx  PRD.md  PRD_v2.md
structure-batiment/scripts/: compare_3dm.py
structure-batiment/structure_aligner/: __main__.py  config.py  main.py  pipeline_v2.py
structure-batiment/tests/: conftest.py  test_analysis_integration.py  test_axis_selector.py  test_clustering.py  test_element_aligner.py  test_extractor.py  test_full_pipeline_v2.py  test_geometry.py  test_integration_align.py  test_loader.py  test_object_addition.py  test_object_removal.py  test_pipeline_v2.py  test_processor.py  test_reader.py  test_report_generator.py  test_reverse_etl_integration.py  test_reverse_reader.py  test_reverse_writer.py  test_statistics.py  test_thread_detector.py  test_transformer.py  test_validator.py  test_writer.py
(+62 files in other folders)
