[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structure-aligner"
version = "0.1.0"
description = "Geometric alignment software for building structures"
requires-python = ">=3.10"
dependencies = [
    "rhino3dm>=8.0.0",
    "click>=8.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.scripts]
structure-aligner = "structure_aligner.main:cli"

[tool.setuptools.packages.find]
include = ["structure_aligner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
